assets/src/css/style.css
/* ... */
.parsley-errors-list {
    color: red;
}


/** TIMELINE */

.timeline {
    list-style: none;
    padding: 20px 0 20px;
    position: relative;
}

.timeline:before {
    top: 0;
    bottom: 0;
    position: absolute;
    content: " ";
    width: 3px;
    background-color: #eeeeee;
    left: 50%;
    margin-left: -4.5px;
}

.timeline > li {
    margin-bottom: 20px;
    position: relative;
}

.timeline > li:before,
.timeline > li:after {
    content: " ";
    display: table;
}

.timeline > li:after {
    clear: both;
}

.timeline > li:before,
.timeline > li:after {
    content: " ";
    display: table;
}

.timeline > li:after {
    clear: both;
}

.timeline > li > .timeline-panel {
    width: 50%;
    float: left;
    border: 1px solid #d4d4d4;
    border-radius: 2px;
    padding: 20px;
    position: relative;
    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}

.timeline > li.timeline-inverted + li:not(.timeline-inverted),
.timeline > li:not(.timeline-inverted) + li.timeline-inverted {
    margin-top: -60px;
}

.timeline > li:not(.timeline-inverted) {
    padding-right: 90px;
}

.timeline > li.timeline-inverted {
    padding-left: 90px;
}

.timeline > li > .timeline-panel:before {
    position: absolute;
    top: 26px;
    right: -15px;
    display: inline-block;
    border-top: 15px solid transparent;
    border-left: 15px solid #ccc;
    border-right: 0 solid #ccc;
    border-bottom: 15px solid transparent;
    content: " ";
}

.timeline > li > .timeline-panel:after {
    position: absolute;
    top: 27px;
    right: -14px;
    display: inline-block;
    border-top: 14px solid transparent;
    border-left: 14px solid #fff;
    border-right: 0 solid #fff;
    border-bottom: 14px solid transparent;
    content: " ";
}

.timeline > li > .timeline-badge {
    color: #fff;
    width: 50px;
    height: 50px;
    line-height: 50px;
    font-size: 1.4em;
    text-align: center;
    position: absolute;
    top: 16px;
    left: 50%;
    margin-left: -25px;
    background-color: #999999;
    z-index: 100;
    border-top-right-radius: 50%;
    border-top-left-radius: 50%;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;
}

.timeline > li.timeline-inverted > .timeline-panel {
    float: right;
}

.timeline > li.timeline-inverted > .timeline-panel:before {
    border-left-width: 0;
    border-right-width: 15px;
    left: -15px;
    right: auto;
}

.timeline > li.timeline-inverted > .timeline-panel:after {
    border-left-width: 0;
    border-right-width: 14px;
    left: -14px;
    right: auto;
}

.timeline-badge.primary {
    background-color: #2e6da4 !important;
}

.timeline-badge.success {
    background-color: #3f903f !important;
}

.timeline-badge.warning {
    background-color: #f0ad4e !important;
}

.timeline-badge.danger {
    background-color: #d9534f !important;
}

.timeline-badge.info {
    background-color: #5bc0de !important;
}

.timeline-title {
    margin-top: 0;
    color: inherit;
}

.timeline-body > p,
.timeline-body > ul {
    margin-bottom: 0;
}

.timeline-body > p + p {
    margin-top: 5px;
}


/* Checklist */

.todo-list ul {
    list-style: none;
    margin-left: 11px;
}

.progress .progress-bar span {
    color: #000;
}

.attachment-img {
    max-width: 20px;
    max-height: 20px;
}

.logo-image {
    max-width: 100px;
    max-height: 100px;
}

.has-feedback .form-control {
    padding-right: 6px;
}

.direct-chat-text img {
    max-width: 100%;
}


/* Dropzone */

.dropzone {
    border: 2px dashed #337ab7;
    border-radius: 5px;
    background: white;
    margin-top: 10px;
}

.dropzone .dz-message {
    font-weight: 400;
}

.dropzone .dz-message .note {
    font-size: 0.8em;
    font-weight: 200;
    display: block;
    margin-top: 1.4rem;
}


/** Fix tooltip per elementi disabilitati. */

div.tip {
    display: inline-block !important;
}

.disabled {
    pointer-events: none
}


/* Fancy checkbox: https://bootsnipp.com/snippets/M2bda */

.form-group input[type="checkbox"] {
    display: none;
}

.form-group input[type="checkbox"] + .btn-group > label span {
    width: 20px;
}

.form-group input[type="checkbox"] + .btn-group {
    width: 100%;
    display: flex;
    overflow: auto;
}

.form-group input[type="checkbox"] + .btn-group label:last-child {
    flex-grow: 100;
}

.form-group input[type="checkbox"] + .btn-group > label span:first-child {
    display: none;
}

.form-group input[type="checkbox"] + .btn-group > label span:last-child {
    display: inline-block;
}

.form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
    display: inline-block;
}

.form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
    display: none;
}


/* Sidebar destra per i plugin */

.control-sidebar {
    top: 50px;
}

.control-sidebar {
    padding-top: 10px;
}

@media screen and (min-width: 1140px) {
    .with-control-sidebar {
        margin-right: 230px;
    }

    .control-sidebar-shown {
        right: 0;
        display: block !important;
    }

    .control-sidebar.control-sidebar-shown,
    .control-sidebar.control-sidebar-shown + .control-sidebar-bg {
        right: 0;
    }

    .control-sidebar-toggle {
        display: none !important;
    }
}

/* Fix stile */
.skin-default .nav.navbar-nav li a {
    color: #FFFFFF;
}

.skin-default .nav.navbar-nav li a:hover {
    background: #222222;
}

